--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "snowfire/beautymail": "^1.1",
         "spatie/laravel-sluggable": "^3.5",
         "stripe/stripe-php": "^13.9",
-        "symfony/http-client": "^6.3"
+        "symfony/http-client": "^6.3",
+        "vinkla/hashids": "^11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
