--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "alymosul/laravel-exponent-push-notifications": "^4.0",
         "barryvdh/laravel-dompdf": "^2.0",
+        "bezhansalleh/filament-shield": "^3.1",
         "coolsam/flatpickr": "^3.0",
         "eightynine/filament-excel-import": "^3.0",
         "erusev/parsedown": "^1.7",
