--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "coolsam/flatpickr": "^3.0",
         "eightynine/filament-excel-import": "^3.0",
         "erusev/parsedown": "^1.7",
-        "filament/filament": "3.0-stable",
-        "filament/notifications": "3.0-stable",
+        "filament/filament": "3.2",
+        "filament/notifications": "3.2",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
