--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "3.0",
+        "leandrocfe/filament-apex-charts": "3.1",
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "^3.1",
         "malzariey/filament-daterangepicker-filter": "^2.3",
