feat: google maps

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "alymosul/laravel-exponent-push-notifications": "^4.0",
         "barryvdh/laravel-dompdf": "^2.0",
         "bezhansalleh/filament-shield": "^3.1",
+        "cheesegrits/filament-google-maps": "^3.0",
         "coolsam/flatpickr": "^3.0",
         "eightynine/filament-excel-import": "^3.0",
         "erusev/parsedown": "^1.7",
